# opencv-builder

./: .gitignore  README.md  builder.sh  download_dependency.sh
Jetson/: install.sh
Linux/: install.sh
MacOS_M1/: install.sh
jetson/: buildOpenCVXavier.sh  install.sh  jetsonParams.sh
linux/: install.sh
macos/: auto.sh  install.sh
macos_M1/: install.sh
src/gstream_example/: config.yaml  decoder.py  gst_dec_rtsph264.sh  gst_dec_rtsph265.sh  gst_dec_video.sh  main.py
src/opencv_cuda/: CMakeLists.txt  main.cpp
src/opencv_example/: main.py
